# phidi

./: .gitmodules  CMakeLists.txt  Makefile  main.cc  plugins.json  tmp.json
cmake/: txx.cmake
core/: CMakeLists.txt  dbg_info.cc  dbg_info.hh  dynloader.hh  event.hh  graphviz.hh  layout_tree.cc  layout_tree.hh  plugin_registry.hh  resources.cc  root.hh
dbg/: asan.supp  phi
init/: CMakeLists.txt  Makefile  init.cc  init.hh
lot/: geometry.hh  impl.cc  layout_tree.hh  main.cc  module.mk
plugins/fonts/: CMakeLists.txt  fonts.cc  fonts.hh
plugins/init/: CMakeLists.txt  init.cc  init.hh
plugins/textures/: CMakeLists.txt  textures.cc  textures.hh
plugins/tool_palette/: CMakeLists.txt  tool_palette.cc  tool_palette.hh
plugins/tool_pallette/: CMakeLists.txt  tool_pallette.cc  tool_pallette.hh
plugins/toolbrush/: CMakeLists.txt  toolbrush.cc  toolbrush.hh
plugins/tools/: CMakeLists.txt  tools.cc  tools.hh
src/: CMakeLists.txt  Makefile  application.hh  bind.hh  brush.cc  button.cc  button.hh  canvas.cc  column.hh  debug.hh  dynloader.hh  event.hh  geometry.hh  init.hh  layout_tree.hh  loader.hh  lru_cache.hh  main.cc  pallette.cc  pallette.hh  plugin_registry.hh  rectangle.hh  resources.cc  resources.h  root.hh  tool_manager.cc  tool_pallette.cc  tools.hh  widget.cc  widget.hh  widget_manager.hh
textures/: CMakeLists.txt  textures.cc  textures.hh
tool_pallette/: CMakeLists.txt  Makefile  tool_pallette.cc  tool_pallette.hh
toolbrush/: CMakeLists.txt  Makefile  toolbrush.cc  toolbrush.hh
tools/: CMakeLists.txt  Makefile  tools.cc  tools.hh
widgets/: CMakeLists.txt  button.cc  button.hh  column.hh  flex.hh  padding.hh  palette.cc  palette.hh  pallette.cc  pallette.hh  placeholder.hh  row.hh  sized_box.hh  text.hh  text_field.cc  text_field.hh  widget.hh  widget_manager.hh
